--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-bootstrap-v5==1.0.5
 django-heroku==0.3.1
 django-registration==3.2
 django-tinymce==3.3.0
+djangorestframework==3.12.4
 gunicorn==20.1.0
 importlib-metadata==3.10.1
 Pillow==8.3.2
