--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dj-database-url==0.5.0
 Django==3.2.7
 django-bootstrap-v5==1.0.5
 django-heroku==0.3.1
+django-mathfilters==1.0.0
 django-registration==3.2
 django-tinymce==3.3.0
 djangorestframework==3.12.4
